--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     Взнос за телеграммы
                   </td>
                   <td class="tablerightbottom tabletextright">
-                    100 руб. 21 руб. 16 коп.
+                    <s class="strike">100 руб.</s> 21 руб. 16 коп.
                   </td>
                 </tr>
                 <!--ряд с ячейками тела таблицы-->
@@ -195,7 +195,9 @@
                 <tr>
                   <td class="tableleftbottom">
                     <p class="tabletextleft">Взнос за телеграммы:</p>
-                    <p class="tabletextright">100 руб. 21 руб. 16 коп.</p>
+                    <p class="tabletextright">
+                      <s class="strike">100 руб.</s> 21 руб. 16 коп.
+                    </p>
                   </td>
                 </tr>
                 <!--ряд с ячейками тела таблицы-->
@@ -240,8 +242,9 @@
                 <img class="numbercard" src="./assets/number.png" alt="" />
                 <p class="numb">3</p>
                 <p class="cardtext">
-                  Поднятие сельского хозяйства в радиусе на тысячу километров:
-                  производство овощей, фруктов, икры, шоколадных конфет
+                  Поднятие сельского<br />хозяйства в радиусе<br />на тысячу
+                  километров:<br />производство овощей,<br />фруктов, икры,
+                  шоколадных<br />конфет
                 </p>
               </div>
             </div>
@@ -249,7 +252,7 @@
               <div class="cardinside">
                 <img class="numbercard" src="./assets/number.png" alt="" />
                 <p class="numb">4</p>
-                <p class="cardtext">Строительство дворца для турнира</p>
+                <p class="cardtext">Строительство дворца<br />для турнира</p>
               </div>
             </div>
             <div class="item5">
@@ -257,7 +260,7 @@
                 <img class="numbercard" src="./assets/number.png" alt="" />
                 <p class="numb">5</p>
                 <p class="cardtext">
-                  Размещение гаражей для гостевого автотранспорта
+                  Размещение гаражей<br />для гостевого<br />автотранспорта
                 </p>
               </div>
             </div>
@@ -276,7 +279,7 @@
                 <img class="numbercard" src="./assets/number.png" alt="" />
                 <p class="numb">7</p>
                 <p class="cardtext">
-                  Создание аэропорта «Большие Васюки» с<br />регулярным
+                  Создание аэропорта «Большие Васюки»<br />с регулярным
                   отправлением почтовых<br />самолётов и дирижаблей во все
                   концы<br />света, включая Лос-Анжелос и Мельбурн
                 </p>
@@ -316,8 +319,9 @@
                   <img class="numbercard" src="./assets/number.png" alt="" />
                   <p class="numb">3</p>
                   <p class="cardtext">
-                    Поднятие сельского хозяйства в радиусе на тысячу километров:
-                    производство овощей, фруктов, икры, шоколадных конфет
+                    Поднятие сельского хозяйства в радиусе<br />на тысячу
+                    километров: производство овощей, фруктов, икры, шоколадных
+                    конфет
                   </p>
                 </div>
               </div>
@@ -331,7 +335,7 @@
                   <img class="numbercard" src="./assets/number.png" alt="" />
                   <p class="numb">5</p>
                   <p class="cardtext">
-                    Размещение гаражей для гостевого автотранспорта
+                    Размещение гаражей<br />для гостевого автотранспорта
                   </p>
                 </div>
               </div>
@@ -340,8 +344,8 @@
                   <img class="numbercard" src="./assets/number.png" alt="" />
                   <p class="numb">6</p>
                   <p class="cardtext">
-                    Постройка сверхмощной радиостанции для передачи всему миру
-                    сенсационных результатов
+                    Постройка сверхмощной радиостанции<br />для передачи всему
+                    миру сенсационных результатов
                   </p>
                 </div>
               </div>
@@ -350,9 +354,9 @@
                   <img class="numbercard" src="./assets/number.png" alt="" />
                   <p class="numb">7</p>
                   <p class="cardtext">
-                    Создание аэропорта «Большие Васюки» с<br />регулярным
+                    Создание аэропорта «Большие Васюки»<br />с регулярным
                     отправлением почтовых<br />самолётов и дирижаблей во все
-                    концы<br />света, включая Лос-Анжелос и Мельбурн
+                    концы света, включая Лос-Анжелос<br />и Мельбурн
                   </p>
                 </div>
               </div>
