--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
               Оплатите взнос на телеграммы для организации Международного
               васюкинского турнира по шахматам
             </h2>
+            <h2 class="header_text4_mobile">
+              Оплатите взнос на телеграммы<br />для организации
+              Международного<br />васюкинского турнира по шахматам
+            </h2>
             <div class="header_buttons">
               <button onclick="document.location='#help'" class="btn1">
                 Поддержать<br />
